--- a/index.css
+++ b/index.css
@@ -24,6 +24,7 @@ body {
   border-bottom: 1ps solid rgba(255, 255, 255, .2);
   display: flex;
   align-items: center;
+  justify-content: center;
   padding: 0 2rem;
   z-index: 1000;
   box-shadow: 0 2px 20px rgba(0, 0, 0, .1);
